--- a/l10n/fr-FR.json
+++ b/l10n/fr-FR.json
@@ -1,5 +1,5 @@
 {
-  "API": "Salut {name} !!!!!",
-  "INLINE": "message en ligne",
-  "VARIABLE": "mesage avec la variable nommée 'name': {name}"
+    "translated.simple": "(traduit) Message simple",
+    "translated.singleVariable": "(traduit) Message a variable unique 'name': {name}",
+    "translated.multipleVariable": "(traduit) Message avec les variables: 'foo' is {foo}; 'bar' is {bar}"
 }
